# weather-prediction-model

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: backend-deploy.yml
api/: .dockerignore  Dockerfile  app.py  docker-compose.yml  requirements.txt  utils.py
docs/: mkdocs.yml
docs/docs/: index.md
frontend/: app.vue  bun.lockb  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js
frontend/assets/css/: main.css
frontend/components/: First.vue  Footer.vue  Hero.vue  Navbar.vue  Predictions.vue  Second.vue
frontend/layouts/: default.vue
frontend/pages/: about.vue  index.vue
models/: LinearSVR_model.sav  SVR_model.sav  SVR_model_m2.sav  finalized_model_M1.sav  finalized_model_M2.sav  linear regression .ipynb  regression_model_M1.sav  regression_model_M2.sav
notebooks/: 2.0-ml-modeling.ipynb  4.0-simplified.ipynb  4_ML_Models.ipynb  ML_modeling.ipynb  data_preprocessing.ipynb  evalandanalysis
reports/paper/: project_paper.tex
src/: Dockerfile  build_models.py  dataset.py  features.py  plots.py  requirements.txt
src/modeling/: predict.py  train.py
